[package]
name = "JeremyV2"
version = "0.1.0"
edition = "2024"

[dependencies]
clamav-client = "2.0.1"
futures-util = "0.3.31"
openssl = { version = "0.10.72", features = ["vendored"] }
openssl-sys = { version = "0.9.107", features = ["vendored"] }
rand = "0.9.1"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["stream", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
serde_json = "1.0.140"
serenity = "0.12.4"
signal-hook = "0.3.17"
tokio = { version = "1.44.2", features = ["full"] }
